# wobblepy

./: CMakeLists.txt  LICENSE  README.md  copypaste
wobblepy/: CMakeLists.txt  core-test.cc  core.cc  core.h  dict.h  methods.cc  methods.h  type.h  values.cc  values.h  wobblepy-test.py
